tests/invalid/trait/method_unknown_type.facet
trait BadMethod {
  fn make(self: &mut Self) -> MissingType;
}

fn main() -> unrestricted () {
  ()
}
